--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,12 +10,12 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <Button
 
-            style="@style/HcButton.Contained"
+            style="@style/xButton.Contained"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
@@ -23,13 +23,13 @@
             android:textAllCaps="false" />
 
         <Button
-            style="@style/HcButton.Contained.328w"
+            style="@style/xButton.Contained.328w"
             android:layout_margin="10dp"
             android:text="固定宽高的实心按钮"
             android:textAllCaps="false" />
 
         <Button
-            style="@style/HcButton.Outlined"
+            style="@style/xButton.Outlined"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
@@ -37,19 +37,19 @@
             android:textAllCaps="false" />
 
         <Button
-            style="@style/HcButton.Outlined.288w"
+            style="@style/xButton.Outlined.288w"
             android:layout_margin="10dp"
             android:text="固定宽高的线框按钮"
             android:textAllCaps="false" />
 
         <Button
-            style="@style/HcButton.Text"
+            style="@style/xButton.Text"
             android:layout_margin="10dp"
             android:text="自适应宽高的文本按钮"
             android:textAllCaps="false" />
 
         <Button
-            style="@style/HcButton.Text"
+            style="@style/xButton.Text"
             android:layout_width="200dp"
             android:layout_height="50dp"
             android:layout_margin="10dp"
